--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
           package="com.helloworld.lockscreendome">
 
     <application
-        android:name=".APP"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,7 +17,7 @@
         </activity>
 
         <service
-            android:name=".service.LockScreenService"
+            android:name=".LockScreenService"
             android:enabled="true"
             android:exported="true">
         </service>
